--- a/extension/src/pages/rooms.html
+++ b/extension/src/pages/rooms.html
@@ -19,18 +19,20 @@
       <div id="w-300">
         <div class="flex flex-col m-4">
           <div class="border border-3">
-            <input type="text" placeholder="Room Name" class="w-full focus:outline-none focus:ring-none"/>
+            <input type="text" name="roomId" placeholder="Room Name" class="w-full focus:outline-none focus:ring-none"/>
           </div>
           <div class="border border-3">
-            <input type="text" placeholder="User Name" class="w-full focus:outline-none focus:ring-none"/>
+            <input type="text" name="userId" placeholder="User Name" class="w-full focus:outline-none focus:ring-none"/>
           </div>
           <div class="mt-2">
-            <button class="bg-blue-500 text-white p-1 rounded">Add Room</button>
-            <button class="bg-blue-500 text-white p-1 rounded">Join Room</button>
+            <button id="createRoomBtn" class="bg-blue-500 text-white p-1 rounded">Create Room</button>
+            <button id="joinRoomBtn" class="bg-blue-500 text-white p-1 rounded">Join Room</button>
+            <button id="leaveRoomBtn" class="bg-blue-500 text-white p-1 rounded">Leave Room</button>
           </div>
         </div>
       </div>
 
     </div>
   </body>
+  <script src="js/index.js"></script>
 </html>
